# rose

./: .gitignore  AGENTS.md  CLA.md  Cargo.toml  README.md  deny.toml  setup.sh
.buildkite/: Dockerfile  pipeline.yml
.config/: nextest.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
doc/: spec.md
lib/: Cargo.toml
lib/benches/: e2e_latency.rs
lib/src/: cli.rs  config.rs  lib.rs  protocol.rs  pty.rs  scrollback.rs  session.rs  ssp.rs  stun.rs  terminal.rs  testutil.rs  transport.rs
lib/src/cli/: client.rs  input.rs  keygen.rs  mod.rs  server.rs  ssh_bootstrap.rs  util.rs
lib/tests/: integration.rs  mosh_ported.rs
lib/tests/common/: mod.rs
lib/tests/snapshots/: integration__after_narrow_10col.snap  integration__after_widen_40col.snap  integration__initial_20col.snap
site/: build.sh  config.toml
site/content/: _index.md
site/static/: style.css
site/templates/: base.html  index.html
