[workspace]
members = ["lib", "cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
# Denied documentation lints
doc_broken_link = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# MachineApplicable pedantic lints
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
cast_lossless = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
collapsible_else_if = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
enum_glob_use = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
ip_constant = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
must_use_candidate = "warn"
needless_bitwise_bool = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
unchecked_time_subtraction = "warn"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnested_or_patterns = "warn"
wildcard_imports = "warn"

# MachineApplicable nursery lints
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
missing_const_for_fn = "warn"
needless_collect = "warn"
nonstandard_macro_braces = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
search_is_some = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
too_long_first_doc_paragraph = "warn"
trait_duplication_in_bounds = "warn"
unnecessary_struct_initialization = "warn"
unused_rounding = "warn"
use_self = "warn"

[workspace.dependencies]
anyhow = "1.0.101"
criterion = { version = "0.8.2", features = ["async_tokio"] }
insta = "1.46.3"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
