[package]
name = "rose-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rose"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rose = { version = "0.1.0", path = "../lib" }
tokio.workspace = true

[build-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
