[package]
name = "rose"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
portable-pty = "0.9.0"
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = "0.23.36"
rustls-platform-verifier = "0.6.2"
termwiz = "0.23.3"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wezterm-term = { git = "https://github.com/wezterm/wezterm", branch = "main", version = "0.1.0" }

[dev-dependencies]
bytes = "1.11.1"
criterion.workspace = true
insta.workspace = true
russh = "0.57.0"
tokio = { workspace = true, features = ["full"] }
tracing-chrome = "0.7.2"
tracing-subscriber = { workspace = true, features = ["registry"] }

[[bench]]
name = "e2e_latency"
harness = false

